--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>vuex</title>
 </head>
 
@@ -11,10 +12,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
-<script>
-    console.log(`%c `, `padding:50px 500px;line-height:200px;background:url('https://upload-images.jianshu.io/upload_images/2848009-d066859cd27cb1aa?imageMogr2/auto-orient/strip|imageView2/2/w/400/format/webp') no-repeat;`)
-    console.log(`%c两个BUG鸣翠柳\n一行代码上西天\n春宵一刻值千金\n完事起来敲代码\n       ----Mr.Liux`, `color:blue;text-shadow: 0 1px 0 #ccc,0 2px 0 #c9c9c9,0 3px 0 #bbb,0 4px 0 #b9b9b9,0 5px 0 #aaa,0 6px 1px rgba(0,0,0,.1),0 0 5px rgba(0,0,0,.1),0 1px 3px rgba(0,0,0,.3),0 3px 5px rgba(0,0,0,.2),0 5px 10px rgba(0,0,0,.25),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.15);font-size:5em;`)
-    console.log(`%c `, `padding:50px 300px;line-height:100px;background:url('https://pic1.zhimg.com/v2-232fc40e9b41f37839137d9a3a1f320c_b.webp') no-repeat;`)
-</script>
+
+<script src="static/index.js"></script>
 
 </html>
